--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npm start app.json"
+    "build": "npm run build",
+    "start": "npm start app.js",
+    "dev": "npm run start"
   },
   "author": "",
   "license": "ISC",
